--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,22 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  background-color: rgb(193, 241, 225);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  display: flex;
+  align-items: center;
+
+}
+
+h1 {
+  text-transform: uppercase;
+}
+
+p {
+  text-transform: capitalize;
+
+}
+
+img {
+  max-width: 300px;
 }
