--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,22 +1,21 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
 html {
-  background-color: rgb(193, 241, 225);
+  font-size: 62.5%;
 }
 
 body {
-  display: flex;
-  align-items: center;
-
-}
-
-h1 {
-  text-transform: uppercase;
-}
-
-p {
-  text-transform: capitalize;
-
-}
-
-img {
-  max-width: 300px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  /* font-size: 16px; */
+  line-height: 1.7;
+  color: #777;
+  padding: 3rem;
+  box-sizing: border-box;
 }
